# IncendieOS

./: CMakeLists.txt  README.md  install.sh
src/kernel/: kernel.c
